// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trn utils convert react-intl style objects into po style objects 1`] = `
Object {
  "id1": Object {
    "comments": Object {
      "extracted": "text for test",
      "reference": "text.txt:2:5",
      "translator": "MW-001",
    },
    "msgid": "id1",
    "msgstr": Array [
      "id1 text",
    ],
  },
  "id2": Object {
    "comments": Object {
      "extracted": "text for test v2",
      "reference": "text2.txt:10:10",
      "translator": "MW-002",
    },
    "msgid": "id2",
    "msgstr": Array [
      "id2 text",
    ],
  },
}
`;

exports[`trn utils loads resource list and sorts by date modified 1`] = `
Array [
  "MW-1168_gh_delete_discussion",
  "MW-1454_memberSample",
]
`;

exports[`trn utils merge objects, throw error if dupe key 1`] = `
Object {
  "id1": Object {
    "comments": Object {
      "extracted": "text for test",
      "reference": "text.txt:2:5",
    },
    "msgid": "id1",
    "msgstr": Array [
      "id1 text",
    ],
  },
  "id2": Object {
    "comments": Object {
      "extracted": "text for test v2",
      "reference": "text2.txt:10:10",
    },
    "msgid": "id2",
    "msgstr": Array [
      "id2 text",
    ],
  },
}
`;

exports[`trn utils takes po file content, extract trn content 1`] = `
Object {
  "event.oneMemberWent": Object {
    "comments": Object {
      "reference": "src/components/EventCard.jsx:27:16",
      "translator": "MW-000",
    },
    "msgid": "event.oneMemberWent",
    "msgstr": Array [
      "1 Mitglied ging",
    ],
  },
}
`;

exports[`trn utils takes trn content, returns po file 1`] = `
"msgid \\"\\"
msgstr \\"Content-Type: text/plain; charset=utf-8\\\\n\\"

# MW-000
#: src/components/EventCard.jsx:27:16
msgid \\"event.oneMemberWent\\"
msgstr \\"1 Mitglied ging\\"
"
`;

exports[`trn utils wraps Po objects 1`] = `
Object {
  "charset": "utf-8",
  "headers": Object {
    "content-type": "text/plain; charset=utf-8",
  },
  "translations": Object {
    "": Array [
      Object {},
      Object {},
    ],
  },
}
`;
